Sidebar Design Done

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 .home{
-    background-color: crimson;
-    .title{
-        color: white;
+    display: flex;
+
+    .homeContainer{
+        flex: 6;
     }
 }
